--- a/style.css
+++ b/style.css
@@ -1,272 +1,253 @@
 * {
-    margin: 0;
-    padding: 0;
-  }
+  margin: 0;
+  padding: 0;
+}
 
-  .hidden {
-    display: none;
-  }
-  
-  body {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #004980;
-  }
-  
-  .app {
-    color: #004980;
-    display: flex;
-    flex-direction: column;
-    margin-top: 22px;
-    margin-bottom: 49px;
-    margin-left: 26px;
-    margin-right: 23px;
-  }
+.hidden {
+  display: none;
+}
 
-  .introText {
-    width: 208px;
-    height: 96px;
-    left: 408px;
-    top: 210px;
+body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #004980;
+}
 
-    font-family: 'StratosSkyeng', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 40px;
-    line-height: 48px;
-    text-align: center;
-    font-feature-settings: 'pnum' on, 'lnum' on;
+.app {
+  color: #004980;
+  margin-right: 23px;
+  margin-top: 22px;
+  margin-bottom: 49px;
+  /* stylelint-disable-next-line declaration-block-no-redundant-longhand-properties */
+  margin-left: 26px;
+  display: flex;
+  flex-direction: column;
+}
 
-    color: #004980;
-    margin-left: 136px;
-    margin-bottom: 48px;
-  }
+/* stylelint-disable-next-line selector-class-pattern */
+.introText {
+  width: 208px;
+  height: 96px;
+  left: 408px;
+  top: 210px;
+  font-family: StratosSkyeng, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 48px;
+  text-align: center;
+  font-feature-settings: "pnum" on, "lnum" on;
+  color: #004980;
+  margin-left: 136px;
+  margin-bottom: 48px;
+}
 
-  .number {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 24px;
+.number {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+}
 
-  }
+.count {
+  width: 97px;
+  height: 98px;
+  left: 342px;
+  top: 354px;
+  font-family: StratosSkyeng, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 72px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #0080c1;
+}
 
-  .count {
-    width: 97px;
-    height: 98px;
-    left: 342px;
-    top: 354px;
+.btn {
+  width: 246px;
+  height: 50px;
+  left: 389px;
+  top: 519px;
+  background: #7ac100;
+  border-radius: 12px;
+  border-color: transparent;
+  font-family: StratosSkyeng, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 32px;
+  text-align: center;
+  color: #fff;
+  margin: 67px auto 0;
+}
 
-    font-family: 'StratosSkyeng';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 64px;
-    line-height: 72px;
-    display: flex;
-    align-items: center;
-    text-align: center;
+/* stylelint-disable-next-line selector-class-pattern */
+.numberBox1 {
+  width: 98px;
+  height: 98px;
+  left: 341px;
+  top: 354px;
+  background-color: #fff;
+  border-radius: 12px;
+  font-family: StratosSkyeng, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 72px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: #0080c1;
+}
 
-    color: #0080C1;
+/* stylelint-disable-next-line selector-class-pattern */
+.numberBox2 {
+  width: 98px;
+  height: 98px;
+  left: 341px;
+  top: 354px;
+  background-color: #fff;
+  border-radius: 12px;
+  font-family: StratosSkyeng, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 72px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: #0080c1;
+}
 
-  }
-  
-  .btn {
-    color: #7AC100;
-    width: 246px;
-    height: 50px;
-    left: 389px;
-    top: 519px;    
-    background: #7AC100;
-    border-radius: 12px;
-    border-color: transparent;
-    font-family: 'StratosSkyeng', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 32px;
-    text-align: center;
+/* stylelint-disable-next-line selector-class-pattern */
+.numberBox3 {
+  width: 98px;
+  height: 98px;
+  left: 341px;
+  top: 354px;
+  background-color: #fff;
+  border-radius: 12px;
+  font-family: StratosSkyeng, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 72px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: #0080c1;
+}
 
-    color: #FFFFFF;
-    margin: 67px auto 0;
-  }
+/* stylelint-disable-next-line selector-class-pattern */
+.numberChoose {
+  width: 98px;
+  height: 98px;
+  left: 341px;
+  top: 354px;
+  background-color: #7ac100;
+  border-radius: 12px;
+  font-family: StratosSkyeng, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 72px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: #0080c1;
+}
 
-  .numberBox1 {
-    width: 98px;
-    height: 98px;
-    left: 341px;
-    top: 354px;
+.box {
+  width: 480px;
+  height: 459px;
+  left: 272px;
+  top: 158px;
+  background: #c2f5ff;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
-    background-color: #FFFFFF;
-    border-radius: 12px;
+.clocks {
+  width: 155px;
+  height: 72px;
+  left: 22px;
+  top: 41px;
+  font-family: StratosSkyeng, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 72px;
+  color: #fff;
+}
 
-    font-family: 'StratosSkyeng', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 64px;
-    line-height: 72px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+.time {
+  width: 28px;
+  height: 32px;
+  left: 61px;
+  top: 22px;
+  font-family: StratosSkyeng, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 32px;
+  font-feature-settings: "pnum" on, "lnum" on;
+  color: #fff;
+}
 
-    color: #0080C1;
-  }
+/* stylelint-disable-next-line selector-class-pattern */
+.timeStyle {
+  margin-top: 150px;
+  display: flex;
+  justify-content: space-between;
+}
 
-  .numberBox2 {
-    width: 98px;
-    height: 98px;
-    left: 341px;
-    top: 354px;
+/* stylelint-disable-next-line selector-class-pattern */
+.boxTime {
+  display: flex;
+  margin-top: 22px;
+  margin-left: 26px;
+  gap: 57px;
+}
 
-    background-color: #FFFFFF;
-    border-radius: 12px;
+/* stylelint-disable-next-line selector-class-pattern */
+.btnRestart {
+  width: 246px;
+  height: 50px;
+  left: 389px;
+  top: 519px;
+  background: #7ac100;
+  border-radius: 12px;
+  border-color: transparent;
+  font-family: StratosSkyeng, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 32px;
+  text-align: center;
+  color: #fff;
+  margin-top: 52px;
+}
 
-    font-family: 'StratosSkyeng', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 64px;
-    line-height: 72px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+/* stylelint-disable-next-line selector-class-pattern */
+.cardBox {
+  margin-top: 35px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+}
 
-    color: #0080C1;
-  }
-
-  .numberBox3 {
-    width: 98px;
-    height: 98px;
-    left: 341px;
-    top: 354px;
-
-    background-color: #FFFFFF;
-    border-radius: 12px;
-
-    font-family: 'StratosSkyeng', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 64px;
-    line-height: 72px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-
-    color: #0080C1;
-  }
-
-  .numberChoose {
-    width: 98px;
-    height: 98px;
-    left: 341px;
-    top: 354px;
-
-    background-color:#7AC100;
-    border-radius: 12px;
-
-    font-family: 'StratosSkyeng', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 64px;
-    line-height: 72px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-
-    color: #0080C1;
-  }
-
-  .box {
-    width: 480px;
-    height: 459px;
-    left: 272px;
-    top: 158px;
-
-    background: #C2F5FF;
-    border-radius: 12px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-
-  .clocks {
-    width: 155px;
-    height: 72px;
-    left: 22px;
-    top: 41px;
-    font-family: 'StratosSkyeng', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 64px;
-    line-height: 72px;
-    color: #FFFFFF;
-  }
-
-  .time {
-    width: 28px;
-    height: 32px;
-    left: 61px;
-    top: 22px;
-
-    font-family: 'StratosSkyeng', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 32px;
-    font-feature-settings: 'pnum' on, 'lnum' on;
-    color: #FFFFFF;
-
-  }
-
-  .timeStyle {
-    margin-top: 150px;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .boxTime {
-    display: flex;
-    margin-top: 22px;
-    margin-left: 26px;
-    gap: 57px;
-
-  }
-
-  .btnRestart {
-    color: #7AC100;
-    width: 246px;
-    height: 50px;
-    left: 389px;
-    top: 519px;    
-    background: #7AC100;
-    border-radius: 12px;
-    border-color: transparent;
-    font-family: 'StratosSkyeng', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 32px;
-    text-align: center;
-
-    color: #FFFFFF;
-    margin-top: 52px;
-  }
-
-  .cardBox {
-    margin-top: 35px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 15px;
-
-  }
-
-  .card {
-    width: 95px;
-    height: 133px;
-    left: 26px;
-    top: 148px;
-
-    background: #FFFFFF;
-    border-radius: 4px;
-    align-items: center;
-  }
-  /*# sourceMappingURL=style.css.map */
+.card {
+  width: 95px;
+  height: 133px;
+  left: 26px;
+  top: 148px;
+  background: #fff;
+  border-radius: 4px;
+  align-items: center;
+}
