--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ body {
   top: 354px;
   background-color: #fff;
   border-radius: 12px;
+  border-color: transparent;
   font-family: StratosSkyeng, sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -112,6 +113,7 @@ body {
   top: 354px;
   background-color: #fff;
   border-radius: 12px;
+  border-color: transparent;
   font-family: StratosSkyeng, sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -131,6 +133,7 @@ body {
   top: 354px;
   background-color: #fff;
   border-radius: 12px;
+  border-color: transparent;
   font-family: StratosSkyeng, sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -150,6 +153,7 @@ body {
   top: 354px;
   background-color: #7ac100;
   border-radius: 12px;
+  border-color: transparent;
   font-family: StratosSkyeng, sans-serif;
   font-style: normal;
   font-weight: 400;
